Improve layout responsiveness for small screens and fix header alignment :q

--- a/src/styles/SASS/layout/header.scss
+++ b/src/styles/SASS/layout/header.scss
@@ -9,11 +9,13 @@
 
 .headerContainer {
     position: fixed;
+    left: 0;
+    padding: 5px;
     width: 100vw;
     height: $header-height;
     display: flex;
     z-index: $header-depth;
-    justify-content: flex-start;
+    // justify-content: flex-start;
     align-items: center;
     align-content: center;
     flex-flow: row wrap;
