--- a/src/styles/SASS/main.scss
+++ b/src/styles/SASS/main.scss
@@ -40,7 +40,7 @@ ul {
 
 .wholeContainer{
     display: flex;
-    justify-content: center;
+    // justify-content: center;
 
 }
 
@@ -57,8 +57,10 @@ ul {
     // in root.js
     .mainContainer {
         display: flex;
-        padding: 1rem;
+        padding-top: 1rem;
         max-width: 700px;
+        overflow: hidden;
+
     }
     
 
